--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
-- title: Start
+- title: Home
   url: "/"
   side: left
 
@@ -6,7 +6,7 @@
   url: "/getting-started/"
   side: left
 
-- title: "Templates"
+- title: "Design"
   url: "/design/"
   side: left
   dropdown:
@@ -50,7 +50,7 @@
   - title: "No Header but Image"
     url: "/design/no-header-but-image/"
 
-- title: Documentation
+- title: Docs
   url: "/documentation/"
   side: left
   dropdown:
